fix docs search bar overflow issue

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -19,7 +19,6 @@ html {
 
 body {
     margin: 0;
-    overflow-x: hidden;
 }
 
 article,
